--- a/main.css
+++ b/main.css
@@ -7,25 +7,66 @@ html*{
   font-size: 1.4em;
   line-height: 1.3em;
 }
-.menu{
-    padding: 1em;
-    width: 100%;
-    background-color: #D0DDFB;
-    box-shadow: 4px 5px 5px 0px rgba(163,163,163,0.75);
 
+.navbar {
+  overflow: hidden;
+  background-color: #659898;
 }
 
-ul{
-    list-style-type: none;
-    text-decoration: none;
+.navbar a {
+  float: left;
+  font-size: 1.5em;
+  color: white;
+  text-align: center;
+  padding: 1em;
+  text-decoration: none;
 }
-.menu ul {
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
-    flex-wrap: wrap;
+
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
+
+.dropdown .dropbtn {
+  font-size: 1.5em;
+  border: none;
+  outline: none;
+  color: white;
+  padding: .7em;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0; 
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #B0B4B4;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: .5em;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+} 
 
 .pic{
   width: 100%
