--- a/main.css
+++ b/main.css
@@ -4,69 +4,59 @@ html*{
 
 :root{
   font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1.4em;
+  font-size: 1em;
   line-height: 1.3em;
 }
 
-.navbar {
-  overflow: hidden;
-  background-color: #659898;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #119090;
 }
 
-.navbar a {
-  float: left;
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 2em;
+}
+
+
+.button{
+  margin: 1.5em;
+  display: inline-block;
+  padding: 15px 25px;
   font-size: 1.5em;
-  color: white;
+  cursor: pointer;
   text-align: center;
-  padding: 1em;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 1.5em;
-  border: none;
   outline: none;
-  color: white;
-  padding: .7em;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0; 
+  color: #fff;
+  background-color: lightgrey;
+  border: none;
+  box-shadow: 4px 5px 5px 0px rgba(163,163,163,0.75);
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #B0B4B4;
+.button a{
+    text-decoration: none;
+    color: #162955;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.button:hover{background-color: lightgray}
+
+.button:active {
+  background-color: darkgray;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: .5em;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-} 
 
 .pic{
   width: 100%
@@ -77,34 +67,24 @@ article{
   justify-content: space-around;
 }
 
-.slogan{
+h1{
   display:inline-block;
-  font-size: 2em;
   line-height: 1.3em;
+  font-size: 3em;
 }
 
-a:link {
-    text-decoration: none;
+h2{
+   line-height: 1em;
+    font-size: 2em;
 }
 
-.button{
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: lightgrey;
-  border: none;
-  box-shadow: 4px 5px 5px 0px rgba(163,163,163,0.75);
+p{
+    font-size: 1.4em;
+    line-height: 1.2em;
 }
 
-.button:hover{background-color: lightgray}
-
-.button:active {
-  background-color: darkgray;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+@media only screen and (min-width: 917px){
+    h1{
+      width: 100%;
+    }
 }
